[package]
name = "uptimerobot-prometheus"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
prometheus = "0.13.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.162", features = ["derive"] }
log = "0.4.17"
envconfig = "0.10.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
axum = "0.6.18"
futures = "0.3.28"

